<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.new_newest_llm.ui.auth.LoginFragment"
        android:label="@string/login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_login_to_forgot_password"
            app:destination="@id/forgotPasswordFragment" />
        <action
            android:id="@+id/action_login_to_feed"
            app:destination="@id/feedFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.new_newest_llm.ui.auth.RegisterFragment"
        android:label="@string/register">
        <action
            android:id="@+id/action_register_to_feed"
            app:destination="@id/feedFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.example.new_newest_llm.ui.auth.ForgotPasswordFragment"
        android:label="@string/forgot_password" />

    <fragment
        android:id="@+id/feedFragment"
        android:name="com.example.new_newest_llm.ui.feed.FeedFragment"
        android:label="@string/feed">
        <action
            android:id="@+id/action_feed_to_detail"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_feed_to_favorites"
            app:destination="@id/favoritesFragment" />
        <action
            android:id="@+id/action_feed_to_profile"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.new_newest_llm.ui.detail.DetailFragment"
        android:label="@string/article_detail" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.new_newest_llm.ui.favorites.FavoritesFragment"
        android:label="@string/favorites_title">
        <action
            android:id="@+id/action_favorites_to_detail"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.new_newest_llm.ui.profile.ProfileFragment"
        android:label="@string/profile_title">
        <action
            android:id="@+id/action_profile_to_favorites"
            app:destination="@id/favoritesFragment" />
        <action
            android:id="@+id/action_profile_to_change_password"
            app:destination="@id/changePasswordFragment" />
    </fragment>

    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.example.new_newest_llm.ui.profile.ChangePasswordFragment"
        android:label="@string/change_password_title" />

</navigation>
